Max/Msp communication added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    
 
 </body>
-
+<script src="p5.js"></script>
 <script src="codemirror/lib/codemirror.js"></script>
 <script src="codemirror/mode/scheme/scheme.js"></script>
 <script src="codemirror/addon/edit/matchbrackets.js"></script>
