--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="codemirror/addon/display/fullscreen.css">
     <link rel="stylesheet" href="codemirror/theme/night.css">
+    <link rel="stylesheet" href="codemirror/theme/midnight.css">
+    <link rel="stylesheet" href="codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="codemirror/theme/isotope.css">
+    <link rel="stylesheet" href="codemirror/theme/icecoder.css">
+
+    <link rel="stylesheet" href="codemirror/theme/3024-night.css">
+    <link rel="stylesheet" href="codemirror/theme/ayu-dark.css">
+    <link rel="stylesheet" href="codemirror/theme/base16-dark.css">
+    <link rel="stylesheet" href="codemirror/theme/bespin.css">
+    <link rel="stylesheet" href="codemirror/theme/colorforth.css">
+    <link rel="stylesheet" href="codemirror/theme/darcula.css">
+    <link rel="stylesheet" href="codemirror/theme/liquibyte.css">
+    <link rel="stylesheet" href="codemirror/theme/panda-syntax.css">
+
+
+
+    <link rel="stylesheet" href="codemirror/theme/erlang-dark.css">
+
+
+
+
     <link rel="stylesheet" href="codemirror/addon/scroll/simplescrollbars.css">
 
 
@@ -31,6 +52,9 @@
 <script src="codemirror/addon/display/fullscreen.js"></script>
 <script src="codemirror/addon/scroll/simplescrollbars.js"></script>
 <script src="codemirror/addon/comment/comment.js"></script>
+<script src="parinfer/node_modules/parinfer/parinfer.js"></script>
+<script src="parinfer/node_modules/parinfer-codemirror/parinfer-codemirror.js"></script>
+
 <script src="script.js"></script>
 
 </html>
